--- a/website/newsletter/246/index.mdx
+++ b/website/newsletter/246/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /246
-title: "This Week In React #246: Next.js, React Router, TanStack, StyleX, MUI, Storybook | FlashList 2, RN 0.81, Expo, Radon, Gesture Handler, Audio, Skia, Nitro, Strict DOM | TypeScript, Astro, BIDC, SVG, Surveys"
+title: "This Week In React #246: Next.js, React Router, TanStack, StyleX, MUI, Storybook | FlashList 2, RN 0.81, Expo, Radon, Gesture Handler, Audio, Skia, Nitro, Strict DOM | TC39, Node, TypeScript, Astro, BIDC, Surveys"
 authors: [piaskowyk, kacperkapusciak]
 date: 08-20-2025
 unlisted: true
@@ -100,7 +100,6 @@ React Native version 0.81 introduces support for the new Android 16, which enfor
 - 📜 [Why is Unistyles goated](https://www.ali-sh.com/posts/why-is-unistyles-goated): An author with a background in Flutter fell in love with React Native Unistyles for styling components, and he has good reasons for doing so.
 - 📜 [React Native Web with Vite](https://dev.to/dannyhw/react-native-web-with-vite-1jg5): This article details the technical challenges of bundling React Native Web with Vite and shows how `vite-plugin-rnw` can help you achieve it.
 - 📜 [Migrating a React Native's Native Module to Turbo Module on Android](https://andrei-calazans.com/posts/migrating-native-module-to-turbo-module-android/)
-- 📜 [Perfetto to analyze app start performance in React Native android apps](https://andrei-calazans.com/posts/analyzing-app-start-android-systrace/).
 - 📦 [Rozenite Preview - DevTools plugin to preview components in isolation](https://github.com/matinzd/rozenite-preview)
 - 📦 [Radon 1.10 \- Rotation, Audio, Reading .env files & React Native 0.81 support](https://ide.swmansion.com/docs/getting-started/changelog#1.10.x)
 - 📦 [Gesture Handler 2.28 \- RN 0.81 Support, `gestureHandlerRootHOC` deprecation, bug fixes](https://github.com/software-mansion/react-native-gesture-handler/releases/tag/2.28.0)
@@ -119,12 +118,12 @@ React Native version 0.81 introduces support for the new Android 16, which enfor
 
 ## 🔀 Other {#other}
 
+- 📣 [TC39 Advances 11 Proposals for Math Precision, Binary APIs, and More](https://socket.dev/blog/tc39-advances-11-proposals-for-math-precision-binary-apis-and-more)
 - 📊 [State of CSS 2025 - Survey results](https://2025.stateofcss.com/en-US)
 - 📊 [Stack Overflow Dev Survey 2025 - Survey results](https://survey.stackoverflow.co/2025)
-- 📜 [Better CSS layouts](https://ishadeed.com/article/time-layout) \- A tutorial on how to implement the hero section from Time.com.
 - 📜 [Anatomy of a Web Component](https://dbushell.com/2025/08/01/anatomy-of-a-web-component/): The author argues that these custom elements are a powerful and lightweight alternative to large JavaScript frameworks.
-- 📜 [V8 - How we made JSON.stringify more than twice as fast](https://v8.dev/blog/json-stringify)
 - 📜 [An Interactive Guide to SVG Paths](https://www.joshwcomeau.com/svg/interactive-guide-to-paths/)
+- 📦 [Node 22.18](https://nodejs.org/en/blog/release/v22.18.0): The first LTS release to support TypeScript type stripping natively without any flag or warning!
 - 📦 [TypeScript 5.9 \- `import defer` support, expandable IDE tooltips, perf improvements](https://devblogs.microsoft.com/typescript/)
 - 📦 [Bidirectional Channels for JavaScript - Seamless communication between different JS execution contexts](https://github.com/vercel/bidc)
 - 📦 [Astro 5.13 \- multiple sitemaps, experimental improvement to environment variable handling](https://astro.build/blog/astro-5130/)
