--- a/website/newsletter/247/index.mdx
+++ b/website/newsletter/247/index.mdx
@@ -22,7 +22,7 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![AG Charts: The Best React Charts in the World.](/emails/issues/247/aggrid.png)](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-4)
+[![AG Charts: The Best React Charts in the World.](/emails/issues/247/aggrid.jpg)](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-4)
 
 **[AG Charts: The Best React Charts in the World.](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-4)**
 
@@ -52,7 +52,7 @@ Originally built to power AG Grid’s Integrated Charts, it now serves over **1M
 
 ## 💸 Sponsor {#sponsor2}
 
-[![No breakpoints, no console.log — just AI & time travel](/emails/issues/247/wallaby.png)](https://wallabyjs.com/?referrer=ThisWeekInReactAug25)
+[![No breakpoints, no console.log — just AI & time travel](/emails/issues/247/wallaby.jpg)](https://wallabyjs.com/?referrer=ThisWeekInReactAug25)
 
 **[No breakpoints, no console.log — just AI & time travel](https://wallabyjs.com/?referrer=ThisWeekInReactAug25)**
 
