--- a/website/newsletter/247/index.mdx
+++ b/website/newsletter/247/index.mdx
@@ -30,18 +30,16 @@ import Support from "../_support.mdx";
 
 Originally built to power AG Grid’s Integrated Charts, it now serves over **1M npm downloads** each month.
 
-*   🆓 **Free**: A wide range of chart types (bar, line, scatter, area, and more) — free, forever.
-*   🚀 **Fast**: Optimised canvas rendering for large datasets (1M+ points).
-*   🦾 **Accessible**: Built-in support for screen readers and keyboard navigation.
-*   🔄 **AG Grid Integration**: Shared API with AG Grid for seamless integration.
+- 🆓 **Free**: A wide range of chart types (bar, line, scatter, area, and more) — free, forever.
+- 🚀 **Fast**: Optimised canvas rendering for large datasets (1M+ points).
+- 🦾 **Accessible**: Built-in support for screen readers and keyboard navigation.
+- 🔄 **AG Grid Integration**: Shared API with AG Grid for seamless integration.
 
 👉 Get Started for Free: [www.ag-grid.com/charts](https://www.ag-grid.com/charts?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=2025-email-4)
 
 ---
 
 ## ⚛️ React {#react}
-
-<Todo />
 
 - 💸 [The Road to Next - Master Full-Stack Web Development with Next.js 15 and React 19](https://www.road-to-next.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_2.2)
 - 💸 [Build a modern blog with React 19 and Strapi 5 in this step-by-step tutorial](https://strapi.io/blog/how-to-build-a-modern-blog-with-react-19-and-strapi-5?utm_campaign=19282052-Newsletter%20Sponsorships&utm_source=React&utm_medium=2nd%20sponsor&utm_term=tutorial)
@@ -56,19 +54,19 @@ Originally built to power AG Grid’s Integrated Charts, it now serves over **1M
 
 **[No breakpoints, no console.log — just AI & time travel](https://wallabyjs.com/?referrer=ThisWeekInReactAug25)**
 
-15x faster TypeScript and JavaScript debugging than with breakpoints and `console.log`, while upgrading your AI agent 🤖 into an expert debugger with real-time context.  
-  
-Wallaby.js runs your tests as you type, feeding your AI assistant real-time runtime values, code coverage, error details, and execution paths — all right next to your code.  
-  
-Designed specifically for testing, Wallaby features include a **Time Travel Debugger**, the ability to run only opened test files, full-context AI integration, smart test runs, and more. **Better context. Smarter debugging.**  
-  
+15x faster TypeScript and JavaScript debugging than with breakpoints and `console.log`, while upgrading your AI agent 🤖 into an expert debugger with real-time context.
+
+Wallaby.js runs your tests as you type, feeding your AI assistant real-time runtime values, code coverage, error details, and execution paths — all right next to your code.
+
+Designed specifically for testing, Wallaby features include a **Time Travel Debugger**, the ability to run only opened test files, full-context AI integration, smart test runs, and more. **Better context. Smarter debugging.**
+
 👉 **Check It Now:** [Here](https://wallabyjs.com/?referrer=ThisWeekInReactAug25)
 
 ---
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+- 💸 [React Universe Conf – T. Occhino, Ch. Nakazawa, Ch. Cheever, N. Corti & M. Grabowski on the “10 Years of React Native and Beyond” panel](https://www.reactuniverseconf.com?utm_campaign=10_years_panel&utm_source=TWIR&utm_medium=mail&utm_content=post_22_08_2025#panel)
 
 ---
 
